...
    <fragment
        android:id="@+id/settings_developer"
        android:name="net.vonforst.evmap.fragment.preference.DeveloperSettingsFragment"
        android:label="@string/developer_options"
        tools:layout="@layout/fragment_preference" />
    <navigation
        android:id="@+id/favs"
        app:startDestination="@id/favs_frag">
        <fragment
            android:id="@+id/favs_frag"
            android:name="net.vonforst.evmap.fragment.FavoritesFragment"
            android:label="@string/menu_favs"
            tools:layout="@layout/fragment_favorites">
...
                app:destination="@id/map" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/filter"
        android:name="net.vonforst.evmap.fragment.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter" />
    <fragment
        android:id="@+id/filter_profiles"
        android:name="net.vonforst.evmap.fragment.FilterProfilesFragment"
        android:label="@string/menu_manage_filter_profiles"
        tools:layout="@layout/fragment_filter_profiles" />
...
