...
                app:layout_constraintEnd_toStartOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/connectors"
                tools:text="Echtzeitdaten nicht verfügbar" />

            <View
                android:id="@+id/topPart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="-10dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/txtConnectors"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnChargeprice"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go_to_chargeprice"
                        android:visibility="gone" />

...
